--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 	<body>
 		<canvas id="canvas"></canvas>
 		<img id="player" src="assets/player.png" />
+		<img id="layer-1" src="assets/layer-1.png" />
+		<img id="layer-2" src="assets/layer-2.png" />
+		<img id="layer-3" src="assets/layer-3.png" />
+		<img id="layer-4" src="assets/layer-4.png" />
+		<img id="layer-5" src="assets/layer-5.png" />
+
 		<script type="module" src="./main.js"></script>
 	</body>
 </html>
