--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 		<img id="layer-4" src="assets/layer-4.png" />
 		<img id="layer-5" src="assets/layer-5.png" />
 
+		<img id="enemy_fly" src="assets/enemy_fly.png" />
+		<img id="enemy_plant" src="assets/enemy_plant.png" />
+		<img id="enemy_spider" src="assets/enemy_spider_big.png" />
+
 		<script type="module" src="./main.js"></script>
 	</body>
 </html>
