--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
@@ -14,6 +20,7 @@
 		<img id="layer-3" src="assets/layer-3.png" />
 		<img id="layer-4" src="assets/layer-4.png" />
 		<img id="layer-5" src="assets/layer-5.png" />
+		<img id="lives" src="assets/lives.png" />
 
 		<img id="enemy_fly" src="assets/enemy_fly.png" />
 		<img id="enemy_plant" src="assets/enemy_plant.png" />
